# retro

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  retro-e2e-test.md
.github/workflows/: publish.yml
crates/retro-cli/: Cargo.toml
crates/retro-cli/src/: launchd.rs  main.rs
crates/retro-cli/src/commands/: analyze.rs  apply.rs  audit.rs  brief.rs  clean.rs  curate.rs  dash.rs  diff.rs  doctor.rs  hooks.rs  ingest.rs  init.rs  lint.rs  log.rs  migrate.rs  mod.rs  observe.rs  patterns.rs  reindex.rs  review.rs  run.rs  start.rs  status.rs  stop.rs  sync.rs  ui.rs  uninstall.rs
crates/retro-cli/src/tui/: app.rs  event.rs  ui.rs
crates/retro-cli/src/ui/: api.rs  mod.rs
crates/retro-cli/src/ui/assets/: index.html
crates/retro-cli/tests/: dash_fixture.rs  run_pipeline.rs  v2_types_accessible.rs
crates/retro-core/: Cargo.toml
crates/retro-core/src/: audit_log.rs  briefing.rs  claude_settings.rs  config.rs  curator.rs  db.rs  doctor.rs  errors.rs  git.rs  health.rs  hook_event.rs  lib.rs  lint.rs  lock.rs  migrate.rs  models.rs  observer.rs  reconcile.rs  runner.rs  runner_v3.rs  scrub.rs  trust.rs  util.rs
crates/retro-core/src/analysis/: backend.rs  claude_cli.rs  merge.rs  mod.rs  prompts.rs  v3.rs
crates/retro-core/src/ingest/: context.rs  history.rs  mod.rs  session.rs
crates/retro-core/src/projection/: claude_md.rs  global_agent.rs  local_md.rs  mod.rs  skill.rs
crates/retro-core/src/store/: git.rs  index.rs  mod.rs  node.rs  projects.rs  queue.rs  slug.rs  state.rs
crates/retro-projectors/: Cargo.toml
docs/: add-macos-chrome.sh  demo-output.sh  demo-seed.sh  demo.tape
docs/plans/: 2026-02-16-readme-design.md  2026-02-17-auto-apply-design.md  2026-02-17-auto-apply-plan.md  (+8 more)
scenarios/: README.md  analyze-dry-run-no-ai.md  analyze-real-ai-call.md  audit-dry-run-skips-ai.md  curate-dry-run.md  curate-real-ai-call.md  ingest-idempotent.md  init-idempotent.md  null-fields-in-ai-response.md  pr-branch-from-default.md  pr-creation-e2e.md  status-after-lifecycle.md  token-counts-not-dollars.md  v2-backward-compat.md  v2-init-and-lifecycle.md  v2-pipeline-dry-run.md  v3-init-and-lifecycle.md  v3-migrate.md  v3-pipeline-dry-run.md
(+30 files in other folders)
