[package]
name = "retro-cli"
version = "0.2.1"
edition = "2024"
description = "Active context curator for AI coding agents: analyzes Claude Code sessions and generates skills and rules"
license = "MIT"
repository = "https://github.com/ImanHashemi/retro"
keywords = ["claude", "ai", "coding-agent", "context", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "retro"
path = "src/main.rs"

[dependencies]
retro-core = { version = "0.2.1", path = "../retro-core" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1"
