[package]
name = "retro-core"
version = "0.2.3"
edition = "2024"
description = "Core library for retro, the active context curator for AI coding agents"
license = "MIT"
repository = "https://github.com/ImanHashemi/retro"
keywords = ["claude", "ai", "coding-agent", "context", "automation"]
categories = ["development-tools"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
libc = "0.2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
